// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
Array [
  <form
    action=""
  >
    <label
      htmlFor="Deepest note"
    >
      Deepest note : 
      <input
        onChange={[Function]}
        type="text"
        value="F1"
      />
    </label>
    <label
      htmlFor="Selected Chord"
    >
      Selected Chord : 
      <input
        onChange={[Function]}
        type="text"
        value="C3maj7"
      />
    </label>
  </form>,
  <main>
    <ol>
      <li>
        E4
      </li>
      <li>
        A3
      </li>
      <li>
        D3
      </li>
      <li>
        G2
      </li>
      <li>
        C2
      </li>
      <li>
        F1
      </li>
    </ol>
    <ol>
      <li>
        <ol>
          <li
            className=""
          >
            F4
          </li>
          <li
            className=""
          >
            Gb4
          </li>
          <li
            className=""
          >
            G4
          </li>
          <li
            className=""
          >
            Ab4
          </li>
          <li
            className=""
          >
            A4
          </li>
          <li
            className=""
          >
            A#4
          </li>
          <li
            className=""
          >
            B4
          </li>
          <li
            className=""
          >
            C5
          </li>
          <li
            className=""
          >
            Db5
          </li>
          <li
            className=""
          >
            D5
          </li>
          <li
            className=""
          >
            Eb5
          </li>
          <li
            className=""
          >
            E5
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li
            className=""
          >
            A#3
          </li>
          <li
            className="selected"
          >
            B3
          </li>
          <li
            className=""
          >
            C4
          </li>
          <li
            className=""
          >
            Db4
          </li>
          <li
            className=""
          >
            D4
          </li>
          <li
            className=""
          >
            D#4
          </li>
          <li
            className=""
          >
            E4
          </li>
          <li
            className=""
          >
            F4
          </li>
          <li
            className=""
          >
            Gb4
          </li>
          <li
            className=""
          >
            G4
          </li>
          <li
            className=""
          >
            Ab4
          </li>
          <li
            className=""
          >
            A4
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li
            className=""
          >
            D#3
          </li>
          <li
            className="selected"
          >
            E3
          </li>
          <li
            className=""
          >
            F3
          </li>
          <li
            className=""
          >
            Gb3
          </li>
          <li
            className="selected"
          >
            G3
          </li>
          <li
            className=""
          >
            G#3
          </li>
          <li
            className=""
          >
            A3
          </li>
          <li
            className=""
          >
            A#3
          </li>
          <li
            className="selected"
          >
            B3
          </li>
          <li
            className=""
          >
            C4
          </li>
          <li
            className=""
          >
            Db4
          </li>
          <li
            className=""
          >
            D4
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li
            className=""
          >
            G#2
          </li>
          <li
            className=""
          >
            A2
          </li>
          <li
            className=""
          >
            A#2
          </li>
          <li
            className=""
          >
            B2
          </li>
          <li
            className="selected"
          >
            C3
          </li>
          <li
            className=""
          >
            C#3
          </li>
          <li
            className=""
          >
            D3
          </li>
          <li
            className=""
          >
            D#3
          </li>
          <li
            className="selected"
          >
            E3
          </li>
          <li
            className=""
          >
            F3
          </li>
          <li
            className=""
          >
            Gb3
          </li>
          <li
            className="selected"
          >
            G3
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li
            className=""
          >
            C#2
          </li>
          <li
            className=""
          >
            D2
          </li>
          <li
            className=""
          >
            D#2
          </li>
          <li
            className=""
          >
            E2
          </li>
          <li
            className=""
          >
            F2
          </li>
          <li
            className=""
          >
            F#2
          </li>
          <li
            className=""
          >
            G2
          </li>
          <li
            className=""
          >
            G#2
          </li>
          <li
            className=""
          >
            A2
          </li>
          <li
            className=""
          >
            A#2
          </li>
          <li
            className=""
          >
            B2
          </li>
          <li
            className="selected"
          >
            C3
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li
            className=""
          >
            F#1
          </li>
          <li
            className=""
          >
            G1
          </li>
          <li
            className=""
          >
            G#1
          </li>
          <li
            className=""
          >
            A1
          </li>
          <li
            className=""
          >
            A#1
          </li>
          <li
            className=""
          >
            B1
          </li>
          <li
            className=""
          >
            C2
          </li>
          <li
            className=""
          >
            C#2
          </li>
          <li
            className=""
          >
            D2
          </li>
          <li
            className=""
          >
            D#2
          </li>
          <li
            className=""
          >
            E2
          </li>
          <li
            className=""
          >
            F2
          </li>
        </ol>
      </li>
    </ol>
  </main>,
]
`;

exports[`renders correctly 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -7,12 +7,15 @@
      >
        Deepest note : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"F1\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid note
+       </span>
      </label>
      <label
        htmlFor=\\"Selected Chord\\"
      >
        Selected Chord : "
`;

exports[`renders correctly 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -7,22 +7,28 @@
      >
        Deepest note : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"F1\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid note
+       </span>
      </label>
      <label
        htmlFor=\\"Selected Chord\\"
      >
        Selected Chord : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"C3maj7\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid chord
+       </span>
      </label>
    </form>,
    <main>
      <ol>
        <li>"
`;

exports[`renders correctly 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -7,21 +7,24 @@
      >
        Deepest note : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"F1\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid note
+       </span>
      </label>
      <label
        htmlFor=\\"Selected Chord\\"
      >
        Selected Chord : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"C3maj7\\"
+         value=\\"G3\\"
        />
      </label>
    </form>,
    <main>
      <ol>
@@ -130,11 +133,11 @@
              className=\\"\\"
            >
              Db4
            </li>
            <li
-             className=\\"\\"
+             className=\\"selected\\"
            >
              D4
            </li>
            <li
              className=\\"\\"
@@ -179,11 +182,11 @@
              className=\\"\\"
            >
              D#3
            </li>
            <li
-             className=\\"selected\\"
+             className=\\"\\"
            >
              E3
            </li>
            <li
              className=\\"\\"
@@ -229,11 +232,11 @@
              className=\\"\\"
            >
              Db4
            </li>
            <li
-             className=\\"\\"
+             className=\\"selected\\"
            >
              D4
            </li>
          </ol>
        </li>
@@ -258,11 +261,11 @@
              className=\\"\\"
            >
              B2
            </li>
            <li
-             className=\\"selected\\"
+             className=\\"\\"
            >
              C3
            </li>
            <li
              className=\\"\\"
@@ -278,11 +281,11 @@
              className=\\"\\"
            >
              D#3
            </li>
            <li
-             className=\\"selected\\"
+             className=\\"\\"
            >
              E3
            </li>
            <li
              className=\\"\\"
@@ -357,11 +360,11 @@
              className=\\"\\"
            >
              B2
            </li>
            <li
-             className=\\"selected\\"
+             className=\\"\\"
            >
              C3
            </li>
          </ol>
        </li>"
`;
